fix: added word-break attribute to table

--- a/src/app/core/admin/hashtags/statistics.component.scss
+++ b/src/app/core/admin/hashtags/statistics.component.scss
@@ -34,6 +34,9 @@ hr {
   text-align: right !important;
   font-weight: bold;
 }
+.mat-column-name {
+  word-break: break-all;
+}
 
 @include bp.media-md {
   hr {
